:hammer: Replaced cancel API endpoint with movebase cancel ROS 1 topic publish.
